# credere-backend

./:   pyproject.toml  .dockerignore  .env.example  .envtest  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Credere.postman_collection.json  Dockerfile  Dockerfile_app  Dockerfile_static  LICENSE  README.md  README.rst  _headers  alembic.ini  babel.cfg  biome.json  index.html  pdf_utils.py  pyproject.toml  reportlab_mods.py  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  style.css  test_requeriments.py
alembic/: env.py
app/: __main__.py  auth.py  aws.py  babel.py  commands.py  db.py  dependencies.py  exceptions.py  i18n.py  mail.py  main.py  models.py  parsers.py  serializers.py  settings.py  util.py
app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
background_processes/: application_utils.py  awards_utils.py  background_config.py  background_utils.py  borrower_utils.py  colombia_data_access.py  fetch_awards.py  message_utils.py  send_reminder.py
docs/: applications.rst  awards.rst  aws.rst  background_remove_data.rst  background_statistics_utils.rst  background_tasks.rst  borrowers.rst  commands.rst  conf.py  email_templates.rst  frontend.rst  general.rst  index.rst  lapsed_applications.rst  requirements.txt  security.rst  statistics.rst  users.rst
email_templates/: Access_to_credit_reminder.html  Access_to_credit_reminder_es.html  Access_to_credit_scheme_for_MSMEs.html  Access_to_credit_scheme_for_MSMEs_es.html  Application_approved.html  Application_approved_es.html  Application_credit_disbursed.html  Application_credit_disbursed_es.html  Application_declined.html  Application_declined_es.html  Application_declined_without_alternative.html  Application_declined_without_alternative_es.html  Application_submitted.html  Application_submitted_es.html  Complete_application_reminder.html  Complete_application_reminder_es.html  Confirm_email_address_change.html  Confirm_email_address_change_es.html  Contract_upload_confirmation.html  Contract_upload_confirmation_es.html  Credit_application_submitted.html  Credit_application_submitted_es.html  FI_Documents_Updated_FI_user.html  FI_Documents_Updated_FI_user_en.html  FI_Documents_Updated_FI_user_es.html  FI_New_application_submission_FI_user.html  FI_New_application_submission_FI_user_es.html  New_Account_Created.html  New_Account_Created_es.html  New_application_submission_OCP_user.html  New_application_submission_OCP_user_es.html  New_contract_submission.html  New_contract_submission_es.html  Overdue_application_FI.html  Overdue_application_FI_es.html  Overdue_application_OCP_admin.html  Overdue_application_OCP_admin_es.html  README.md  Reques_data_to_SME.html  Reques_data_to_SME_es.html  (+66 more)
frontend/: .dockerignore  .env.development  .env.production  default.conf  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
migrations/: env.py
settings_tests/: test_settings.py
tests/: __init__.py  award.json  borrower.json  common_test_client.py  conftest.py  contract.json  test_SLA_overdue_applications.py  test_applications.py  test_background_processes.py  test_client.py  test_commands.py  test_fetch_awards.py  test_fetcher.py  test_i18n.py  test_lapsed_applications.py  test_lenders.py  test_main.py  test_remove_data.py  test_send_reminder.py  test_set_lapsed_applications.py  test_settings.py  (+5 more)
(+459 files in other folders)
