[tool.poetry]
name = "credere-backend"
version = "0.1.0"
description = "Credere API"
authors = ["Codium"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">0.95"
pydantic = ">1.10"
python-dotenv = ">=1.0"
sqlmodel = ">=0.0.8"
sqlalchemy = ">1.4,<2"
sentry-sdk = {extras = ["fastapi"], version = "^1.23.1"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coveralls = "^3.3.1"
flake8 = "^6.0.0"
httpx = "^0.24.0"
isort = "^5.12.0"
pip-tools = "^6.13.0"
pre-commit = "^3.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
uvicorn = "^0.22.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.23.1"}

[tool.black]
line-length = 119
exclude = '/(migrations|node_modules)/'

[tool.isort]
profile = 'black'
line_length = 119
skip = ['migrations']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"