[project]
name = "credere-backend"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]

# https://docs.pydantic.dev/2.0/integrations/mypy/#configuring-the-plugin
[tool.mypy]
plugins = ['pydantic.mypy']
follow_imports = 'silent'
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.uv.pip]
python-platform = "linux"  # greenlet
