[project]
name = "credere-backend"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1", "D205",
    "DTZ",
    "PTH",
    "TRY003",  # errors
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Query",
    "typer.Option",
    "app.dependencies.get_scoped_application_as_guest_via_form",
    "app.dependencies.get_scoped_application_as_guest_via_payload",
    "app.dependencies.get_scoped_application_as_guest_via_uuid",
    "app.dependencies.get_scoped_application_as_user",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright", "id", "type"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"migrations/*" = ["D400", "INP001"]
"*/__main__.py" = [
    "D301",  # click escapes
    "T201",  # print
]
"*/main.py" = ["ARG001"]  # handler
"*/routers/*" = ["ARG001"]  # dependencies
"*/settings.py" = ["ARG001"]  # sentry
"*tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]

# https://docs.pydantic.dev/2.0/integrations/mypy/#configuring-the-plugin
[tool.mypy]
exclude = "(tests|migrations)/"
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.uv.pip]
python-platform = "linux"  # greenlet
